# tge-ext

./: CHANGELOG.md  Cargo.toml  README.md
examples/: animation.rs  asset_registry.rs  canvas_resolution_adapter.rs  ecs.rs  event_handler.rs  hello_world.rs  tank.rs  transform_resolution_adapter.rs
src/: lib.rs
src/asset/: holder.rs  loadable.rs  mod.rs  provider.rs  registry.rs
src/event/: handler.rs  mod.rs
src/graphics/: animation.rs  frame.rs  mod.rs  resolution.rs  sprite.rs
src/graphics/resolution/: adapter.rs  canvas.rs  mod.rs  params.rs  policy.rs  transform.rs
